# trends-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
trending_server/: server.py
trending_server/client/: __init__.py  constants.py  google_trends.py  reddit.py
trending_server/utils/: __init__.py  pdf_generator.py  s3_uploader.py
