[project]
name = "trending-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Szczepaniak",email = "aleksander.szczepaniak113@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "mcp[cli] (>=1.19.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
